refactor: modernize sample app and fix density calculation
- Replace deprecated setHasOptionsMenu with AndroidX MenuProvider in BaseSampleFragment
- Update SamplesMenuFragment to use getParentFragmentManager and constructor-based reflection
- Fix DisplayDensityManager to account for fontScale in scaledDensity